--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -51,4 +51,9 @@
 <a href="{% url 'main:delete_last_entry' %}">
   <button>Hapus Data Terakhir</button>
 </a>
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 {% endblock content %}
