--- a/main/templates/create_park_entry.html
+++ b/main/templates/create_park_entry.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1>Tambah Data Tempat Parkir</h1>
+{% include 'navbar.html' %}
 
-<form method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-    <tr>
-      <td></td>
-      <td>
-        <input type="submit" value="Tambahkan Segera" />
-      </td>
-    </tr>
-  </table>
-</form>
+<div class="container mx-auto py-12 mt-16">
+  <h1 class="text-4xl font-bold text-center mb-6" style="color: #080808; font-family: 'Roboto', sans-serif;">Tambah Data Tempat Parkir</h1>
+
+  <form method="POST" enctype="multipart/form-data" class="bg-[#d3d3d3] shadow-lg rounded-lg p-8">
+    {% csrf_token %}
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      {{ form.as_p }}
+    </div>
+
+    <div class="text-center mt-6">
+      <input type="submit" value="Tambahkan Segera" class="bg-[#6c6c6c] hover:bg-[#080808] text-[#d3d3d3] font-bold py-2 px-6 rounded transition duration-300 cursor-pointer" style="font-family: 'Roboto', sans-serif;" />
+    </div>
+  </form>
+</div>
 
 {% endblock %}
