--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,30 +2,78 @@
 {% load static %}
 {% block content %}
 {% include 'navbar.html' %}
+{% block meta %}
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
+{% endblock meta %}
 
 <div class="overflow-x-hidden sm:px-2 px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100 flex flex-col">
 <div class="container mx-auto py-12 mt-16">
   <h1 class="text-4xl font-bold text-center mb-4" style="color:#080808;">{{ aplikasi }}</h1>
   <h2 class="text-2xl font-semibold text-center mb-8" style="color:#747474;">{{ slogan }}</h2>
 
-    {% if not park_entries %}
-    <div class="empty-state flex flex-col items-center justify-center h-full">
-      <img src="{% static 'image/sedih-banget.png' %}" alt="No Entries" class="w-50 h-50 mb-1 mx-40" />
-      <p class="empty-message mb-6 text-center" style="color: #080808; font-family: 'Poppins', sans-serif;"> 
-          Belum ada input ParKing! 
-      </p>
-    </div>    
-  
-    {% else %}
-    <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
-      {% for park_entry in park_entries %}
-        {% include 'card_park.html' with park_entry=park_entry %}
-      {% endfor %}
-    {% endif %}
-      </p>
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_park_entry' %}" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4" style="font-family: 'Poppins', sans-serif;">
+      Add New Park Entry
+    </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();" style="font-family: 'Poppins', sans-serif;">
+      Add New Park Entry by AJAX
+    </button>
   </div>
 
-  <div class="text-center mt-16 space-y-4 sm:space-y-0 sm:space-x-4">
+  <div id="park_entry_cards"></div>
+
+  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+    <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between p-4 border-b rounded-t">
+        <h3 class="text-xl font-semibold text-gray-900">
+          Add New Park Entry
+        </h3>
+        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="px-6 py-4 space-y-6 form-style">
+        <form id="parkEntryForm">
+            <div class="mb-4">
+                <label for="nama" class="block text-sm font-medium text-gray-700">Nama</label>
+                <input type="text" id="nama" name="nama" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-gray-500" placeholder="Nama tempat parkir" required>
+            </div>
+    
+            <div class="mb-4">
+                <label for="price" class="block text-sm font-medium text-gray-700">Harga</label>
+                <input type="number" id="price" name="price" min="0" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-gray-500" placeholder="Harga tempat parkir" required>
+            </div>
+    
+            <div class="mb-4">
+                <label for="description" class="block text-sm font-medium text-gray-700">Deskripsi</label>
+                <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-gray-500" placeholder="Deskripsi tempat parkir" required></textarea>
+            </div>
+
+            <div class="mb-4">
+                <label for="quantity" class="block text-sm font-medium text-gray-700">Quantity</label>
+                <input type="number" id="quantity" name="quantity" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-gray-500" required>
+            </div>
+
+            <div class="mb-4">
+              <label for="rating" class="block text-sm font-medium text-gray-700">Rating</label>
+              <input type="number" id="rating" name="rating" min="1" max="5" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-gray-500" required>
+          </div>
+        </form>
+    </div>
+      <!-- Modal footer -->
+      <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+        <button type="submit" id="submitParkEntry" form="parkEntryForm" class="bg-gray-500 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-center mt-16 space-y-4 sm:space-y-0 sm:space-x-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4">
     <a href="{% url 'main:create_park_entry' %}" class="block sm:inline bg-[#6c6c6c] hover:bg-[#080808] text-[#d3d3d3] font-bold py-2 px-6 rounded transition duration-300">Tambah Tempat Parkir</a>
     <a href="{% url 'main:delete_all_entry' %}" class="block sm:inline bg-[#080808] hover:bg-[#6c6c6c] text-[#d3d3d3] font-bold py-2 px-6 rounded transition duration-300">Hapus Semua Data</a>
     <a href="{% url 'main:delete_last_entry' %}" class="block sm:inline bg-[#080808] hover:bg-[#6c6c6c] text-[#d3d3d3] font-bold py-2 px-6 rounded transition duration-300">Hapus Data Terakhir</a>
@@ -36,4 +84,128 @@
   <h5 class="text-center mt-12" style="color:#747474;">Sesi terakhir login: {{ last_login }}</h5>
 </div>
 </div>
+
+<script>
+  function addParkEntry() {
+    fetch("{% url 'main:add_park_entry_ajax' %}", {
+      method: "POST",
+      body: new FormData(document.querySelector('#parkEntryForm')),
+    })
+    .then(response => refreshParkEntries())
+
+    document.getElementById("parkEntryForm").reset(); 
+    document.querySelector("[data-modal-toggle='crudModal']").click();
+
+    return false;
+  }
+  async function getParkEntries(){
+      return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+  }
+  const modal = document.getElementById('crudModal');
+  const modalContent = document.getElementById('crudModalContent');
+
+  function showModal() {
+      const modal = document.getElementById('crudModal');
+      const modalContent = document.getElementById('crudModalContent');
+
+      modal.classList.remove('hidden'); 
+      setTimeout(() => {
+        modalContent.classList.remove('opacity-0', 'scale-95');
+        modalContent.classList.add('opacity-100', 'scale-100');
+      }, 50); 
+  }
+
+  function hideModal() {
+      const modal = document.getElementById('crudModal');
+      const modalContent = document.getElementById('crudModalContent');
+
+      modalContent.classList.remove('opacity-100', 'scale-100');
+      modalContent.classList.add('opacity-0', 'scale-95');
+
+      setTimeout(() => {
+        modal.classList.add('hidden');
+      }, 150); 
+  }
+
+  document.getElementById("cancelButton").addEventListener("click", hideModal);
+  document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+  
+  async function refreshParkEntries() {
+    document.getElementById("park_entry_cards").innerHTML = "";
+    document.getElementById("park_entry_cards").className = "";
+    const parkEntries = await getParkEntries();
+    let htmlString = "";
+    let classNameString = "";
+
+    if (parkEntries.length === 0) {
+        classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+        htmlString = `
+      <div class="empty-state flex flex-col items-center justify-center h-full">
+      <img src="{% static 'image/sedih-banget.png' %}" alt="No Entries" class="w-50 h-50 mb-1 mx-40" />
+      <p class="empty-message mb-6 text-center" style="color: #080808; font-family: 'Poppins', sans-serif;"> 
+          Belum ada input ParKing! 
+      </p>
+      </div>
+        `;
+    }
+    else {
+        classNameString = "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full"
+        parkEntries.forEach((item) => {
+            const nama = DOMPurify.sanitize(item.fields.nama);
+            const price = DOMPurify.sanitize(item.fields.price);
+            htmlString += `
+                        <div class="relative break-inside-avoid">
+                          <div class="relative top-5 bg-[#d3d3d3] shadow-lg rounded-lg mb-6 break-inside-avoid flex flex-col ">
+                            <div class="bg-[#080808] text-[#d3d3d3] p-4 rounded-t-lg">
+                              <h3 class="font-bold text-2xl mb-2">${item.fields.nama}</h3>
+                              <p class="text-[#d3d3d3] text-sm">Terakhir diperbarui: ${item.fields.time}</p>
+                            </div>
+                            <div class="p-4">
+                              <p class="font-semibold text-lg text-[#080808] mb-2">Tempat Parkir</p> 
+
+                              <!-- Menampilkan harga dan jumlah -->
+                              <p class="text-[#080808] font-semibold mb-2">Harga: Rp. ${item.fields.price}</p>
+                              <p class="text-[#080808] font-semibold mb-2">Jumlah: ${item.fields.quantity}</p>
+
+                              <!-- Menampilkan deskripsi -->
+                              <p class="text-[#6c6c6c] mb-2">${item.fields.description}</p>
+
+                              <div class="mt-4">
+                                <p class="text-[#080808] font-semibold mb-2">Rating</p>
+                                <div class="relative pt-1">
+                                  <div class="flex mb-2 items-center justify-between">
+                                    <div>
+                                      <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-[#080808] bg-[#d3d3d3]">
+                                        ${item.fields.rating > 10 ? '10+' : item.fields.rating}
+                                      </span>
+                                    </div>
+                                  </div>
+                                  <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-[#6c6c6c]">
+                                    <div style="width: ${item.fields.rating > 10 ? 100 : item.fields.rating * 20}%;" class="bg-[#080808]"></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="absolute top-0 -right-4 flex space-x-1">
+                            <a href="/edit-park/${item.pk}" class="bg-[#6c6c6c] hover:bg-[#080808] text-[#d3d3d3] rounded-full p-2 transition duration-300 shadow-md">
+                              &#9998; <!-- Simbol untuk Edit -->
+                            </a>
+                            <a href="/delete/${item.pk}" class="bg-[#d3d3d3] hover:bg-[#747474] text-[#080808] rounded-full p-2 transition duration-300 shadow-md">
+                              &#10006; <!-- Simbol untuk Delete -->
+                            </a>
+                          </div>
+                        </div>
+                      `;
+        });
+    }
+    document.getElementById("park_entry_cards").className = classNameString;
+    document.getElementById("park_entry_cards").innerHTML = htmlString;
+}
+refreshParkEntries();
+document.getElementById("parkEntryForm").addEventListener("submit", (e) => {
+    e.preventDefault();
+    addParkEntry();
+  })
+</script>
 {% endblock content %}
