--- a/static/css/global.css
+++ b/static/css/global.css
@@ -6,8 +6,8 @@
 }
 .form-style form input:focus, form textarea:focus, form select:focus {
     outline: none;
-    border-color: #674ea7;
-    box-shadow: 0 0 0 3px #674ea7;
+    border-color: #6c6c6c;
+    box-shadow: 0 0 0 3px #6c6c6c;
 }
 @keyframes shine {
     0% { background-position: -200% 0; }
@@ -51,3 +51,24 @@
     max-width: 400px;
     text-align: center; /* Ensure text is centered */
 }
+
+.input-field {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .input-field:focus {
+    outline: none;
+    border-color: #080808;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  textarea.input-field {
+    resize: none; /* Mengunci ukuran box textarea agar tidak bisa diubah */
+  }
